--- a/014_OperatorOverloading/.vscode/settings.json
+++ b/014_OperatorOverloading/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "makefile.extensionOutputFolder": "./.vscode",
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Disabled",
+    "files.associations": {
+        "*.c": "c",
+        "iosfwd": "cpp"
+    }
 }
