--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-
-
+# Ignore .ccls-cache files
+*.ccls-cache
+#
 # Created by https://www.toptal.com/developers/gitignore/api/c++
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++
 
